--- a/Server/package.json
+++ b/Server/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^4.19.2",
+    "multer": "^2.0.2",
     "openai": "^6.14.0",
     "sqlite3": "^5.1.7"
   }
